<resources>
    <string name="app_name">Xparty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="MainPage">Main Page</string>
    <string name="search_party">Search Event</string>
    <string name="favorites_events">Favorites events</string>
    <string name="add_event">Add event</string>
    <string name="my_events">My events</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="Guest">Guest</string>
    <string name="header_second_text">Click login / register</string>
    <string name="enter_party_name">Enter party name</string>
    <string name="enter_party_description">Enter party description</string>
    <string name="enter_party_location">Enter party location</string>
    <string name="publish">Publish</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="lat">Lat</string>
    <string name="start_point">0</string>
    <string name="lon">Lon</string>
    <string name="self_position">Self Position</string>
    <string name="list_view">List View</string>
    <string name="add_image">Add image</string>
    <string name="full_name">Full name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="phone_number">Phone number</string>
    <string name="producers">Producers</string>
    <string name="cancel">Cancel</string>
    <string name="guest">Guest</string>
    <string name="click_login_register">Click login / register</string>
    <string name="eventname">eventName</string>
</resources>